--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>PAGE TITLE</title>
+    <title>Soccer 101</title>
 
     <link href="css/normalize.css" rel="stylesheet" type="text/css">
 
@@ -10,7 +10,7 @@
 
 <header role="banner" class="top">
 
-    <h1>Page Title</h1>
+    <h1>Soccer 101</h1>
 
 </header>
 
